# qt_conan_with_vulkan

./: CMakeLists.txt  README.md  conanfile.py  hellovulkantriangle.qrc  main.cpp  rebuild.sh
hellovulkantriangle/: CMakeLists.txt
